--- a/client/packages/app/package.json
+++ b/client/packages/app/package.json
@@ -3,12 +3,18 @@
   "name": "app",
   "main": "index.ts",
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "axios": "^1.1.3",
+    "expo-font": "~10.2.0",
     "moti": "0.19.0-alpha.6",
     "nativewind": "2.0.9",
-    "solito": "latest",
-    "react-native-reanimated": "2.9.1"
+    "react-hook-form": "^7.39.3",
+    "react-native-reanimated": "2.9.1",
+    "solito": "latest"
   },
   "sideEffects": false
 }
