--- a/client/packages/app/package.json
+++ b/client/packages/app/package.json
@@ -8,13 +8,24 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@tanstack/react-query": "^4.16.1",
     "axios": "^1.1.3",
     "expo-font": "~10.2.0",
     "moti": "0.19.0-alpha.6",
     "nativewind": "2.0.9",
     "react-hook-form": "^7.39.3",
+    "react-native-dotenv": "^3.4.2",
+    "react-native-mmkv": "^2.5.1",
     "react-native-reanimated": "2.9.1",
     "solito": "latest"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "devDependencies": {
+    "@graphql-codegen/cli": "2.13.12",
+    "@graphql-codegen/client-preset": "1.1.3",
+    "@graphql-codegen/typescript-react-query": "^4.0.5"
+  },
+  "scripts": {
+    "codegen": "graphql-codegen --config codegen.ts"
+  }
 }
