--- a/client/apps/expo/app.json
+++ b/client/apps/expo/app.json
@@ -2,9 +2,13 @@
   "expo": {
     "name": "it",
     "slug": "it",
+    "owner": "were-it",
     "version": "1.0.0",
     "scheme": "it",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -18,6 +22,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
+      },
+      "package": "app.wereit.it"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c66ec4a7-3898-439f-8b64-8ab5f6ff229d"
       }
     }
   }
