--- a/client/packages/app/package.json
+++ b/client/packages/app/package.json
@@ -10,6 +10,7 @@
     "@react-navigation/native-stack": "^6.5.0",
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.1.3",
+    "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.0",
     "moti": "0.19.0-alpha.6",
     "nativewind": "2.0.9",
