--- a/client/packages/app/package.json
+++ b/client/packages/app/package.json
@@ -16,15 +16,20 @@
     "nativewind": "2.0.9",
     "react-hook-form": "^7.39.3",
     "react-native-dotenv": "^3.4.2",
+    "react-native-localhost": "^1.0.0",
     "react-native-mmkv": "^2.5.1",
     "react-native-reanimated": "2.9.1",
     "solito": "latest"
   },
   "sideEffects": false,
   "devDependencies": {
+    "@expo/config-types": "^47.0.0",
     "@graphql-codegen/cli": "2.13.12",
     "@graphql-codegen/client-preset": "1.1.3",
-    "@graphql-codegen/typescript-react-query": "^4.0.5"
+    "@graphql-codegen/typescript-react-query": "^4.0.5",
+    "babel-plugin-inline-dotenv": "^1.7.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "dotenv": "^16.0.3"
   },
   "scripts": {
     "codegen": "graphql-codegen --config codegen.ts"
