--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -89,7 +89,7 @@ COPY --from=builder --chown=nobody:root /app/_build/${MIX_ENV}/rel/it ./
 
 USER nobody
 
-CMD ["chmod +x /mnesia", "/app/bin/server"]
+CMD ["/app/bin/server"]
 # Appended by flyctl
 ENV ECTO_IPV6 true
 ENV ERL_AFLAGS "-proto_dist inet6_tcp"
