--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -25,6 +25,9 @@ FROM ${BUILDER_IMAGE} as builder
 RUN apt-get update -y && apt-get install -y build-essential git \
   && apt-get clean && rm -f /var/lib/apt/lists/*_*
 
+# install CA certificates
+RUN apt-get install -y ca-certificates
+
 # prepare build dir
 WORKDIR /app
 
