--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -22,11 +22,8 @@ ARG RUNNER_IMAGE="debian:${DEBIAN_VERSION}"
 FROM ${BUILDER_IMAGE} as builder
 
 # install build dependencies
-RUN apt-get update -y && apt-get install -y build-essential git \
+RUN apt-get update -y && apt-get install -y build-essential git && apt-get install -y ca-certificates \
   && apt-get clean && rm -f /var/lib/apt/lists/*_*
-
-# install CA certificates
-RUN apt-get install -y ca-certificates
 
 # prepare build dir
 WORKDIR /app
