Add chown for mnesia to Dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -80,6 +80,7 @@ ENV LC_ALL en_US.UTF-8
 
 WORKDIR "/app"
 RUN chown nobody /app
+RUN chown nobody /mnesia/*
 
 # set runner ENV
 ENV MIX_ENV="prod"
