--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -80,13 +80,14 @@ ENV LC_ALL en_US.UTF-8
 
 WORKDIR "/app"
 RUN chown nobody /app
-RUN chown nobody /mnesia/*
 
 # set runner ENV
 ENV MIX_ENV="prod"
 
 # Only copy the final release from the build stage
 COPY --from=builder --chown=nobody:root /app/_build/${MIX_ENV}/rel/it ./
+COPY --from=builder --chown=nobody:root /mnesia /mnesia
+RUN chown nobody /mnesia/*
 
 USER nobody
 
